[metadata]
name = pygoofball
version = 0.0.1
author = uhh
author_email = smvreactionschannel@gmail.com
description = a goofy module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bagoflays/pygoofball
project_urls =
    Bug Tracker = https://github.com/bagoflays/pygoofball/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src[metadata]
name = pygoofball
version = 0.0.1
author = help
author_email = smvreactionschannel@gmail.com
description = A goofball project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/bagoflays/pygoofball/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
